fix of overflow

--- a/src/index.css
+++ b/src/index.css
@@ -78,15 +78,6 @@
 	html{
 		scroll-behavior: smooth;
 		scroll-padding-top: 116px;
-    overflow-x: hidden; 
-	}
-	
-	body{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
 	}
 	
   h1 {
